MS: Added storage to handel storing of files. Made test for storing data and reading data.